add more unit test