@@ -1,31 +1,38 @@
 package com.carlolobitana.helpdesk.service.impl;
 
 
+import com.carlolobitana.helpdesk.dto.ContactInfoDTO;
 import com.carlolobitana.helpdesk.dto.EmployeeRequestDTO;
 import com.carlolobitana.helpdesk.dto.EmployeeResponseDTO;
 import com.carlolobitana.helpdesk.dto.EmployeeStatsDTO;
+import com.carlolobitana.helpdesk.enums.EmploymentStatus;
 import com.carlolobitana.helpdesk.exception.ResourceNotFoundException;
+import com.carlolobitana.helpdesk.model.ContactInfo;
 import com.carlolobitana.helpdesk.model.Employee;
 import com.carlolobitana.helpdesk.model.FullName;
+import com.carlolobitana.helpdesk.model.Role;
 import com.carlolobitana.helpdesk.repository.EmployeeRepository;
+import com.carlolobitana.helpdesk.repository.RoleRepository;
 import com.carlolobitana.helpdesk.repository.TicketRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -34,88 +41,114 @@ class EmployeeServiceImplTest {
 
     @Mock private EmployeeRepository employeeRepository;
     @Mock private TicketRepository ticketRepository;
+    @Mock private RoleRepository roleRepository;
 
     @InjectMocks private EmployeeServiceImpl employeeService;
 
+    private Employee employee;
+    private EmployeeRequestDTO requestDTO;
+
+    @BeforeEach
+    void setUp() {
+        employee = new Employee();
+        employee.setId(1L);
+        employee.setName(new FullName("John", "Quincy", "Doe"));
+        employee.setDeleted(false);
+        employee.setContactInfos(new ArrayList<>()); // Initialize for branch testing
+
+        requestDTO = new EmployeeRequestDTO();
+        requestDTO.setFirstName("Jane");
+        requestDTO.setLastName("Smith");
+        requestDTO.setAge(30);
+        requestDTO.setEmploymentStatus(EmploymentStatus.REGULAR);
+    }
+
+    // --- CREATE / UPDATE BRANCHES ---
+
     @Test
-    void getEmployeeById_ValidId_ReturnsDto() {
-        Employee emp = new Employee();
-        emp.setId(1L);
-        emp.setName(new FullName("John", "", "Doe"));
-        when(employeeRepository.findById(1L)).thenReturn(Optional.of(emp));
+    void createEmployee_WithRolesAndContacts_FullCoverage() {
+        // Setup DTO with roles and contacts to trigger loops
+        requestDTO.setRoleIds(Set.of(101L));
+        ContactInfoDTO contact = new ContactInfoDTO();
+        contact.setType("EMAIL");
+        contact.setValue("test@test.com");
+        requestDTO.setContactInfos(List.of(contact));
+
+        Role role = new Role();
+        role.setId(101L);
+        role.setName("ADMIN");
+
+        when(roleRepository.findAllById(any())).thenReturn(List.of(role));
+        when(employeeRepository.save(any(Employee.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        EmployeeResponseDTO result = employeeService.createEmployee(requestDTO);
+
+        assertNotNull(result);
+        assertTrue(result.getRoles().contains("ADMIN"));
+        assertEquals(1, result.getContactInfos().size());
+        verify(employeeRepository).save(any());
+    }
+
+    @Test
+    void updateEmployee_ClearsExistingContacts() {
+        // Scenario: Employee already has one contact, update provides none
+        ContactInfo existingInfo = new ContactInfo();
+        employee.getContactInfos().add(existingInfo);
+
+        when(employeeRepository.findByIdAndDeletedFalse(1L)).thenReturn(Optional.of(employee));
+        when(employeeRepository.save(any())).thenAnswer(i -> i.getArguments()[0]);
+
+        employeeService.updateEmployee(1L, requestDTO);
+
+        // Branch check: mapDtoToEntity should have called clear()
+        assertTrue(employee.getContactInfos().isEmpty());
+    }
+
+    // --- MAPPING BRANCHES (mapToResponse) ---
+
+    @Test
+    void mapToResponse_HandlesNullMiddleName_Branch() {
+        // Branch check: middleName is null
+        employee.setName(new FullName("John", null, "Doe"));
+        when(employeeRepository.findByIdAndDeletedFalse(1L)).thenReturn(Optional.of(employee));
 
         EmployeeResponseDTO result = employeeService.getEmployeeById(1L);
 
+        // Logic check: "John  Doe".replace("  ", " ") -> "John Doe"
         assertEquals("John Doe", result.getName());
-        verify(employeeRepository, times(1)).findById(1L);
     }
 
     @Test
-    void createEmployee_SavesWithCorrectMapping() {
-        EmployeeRequestDTO dto = new EmployeeRequestDTO();
-        dto.setFirstName("Harvey");
-        dto.setLastName("Specter");
-        dto.setAge(45);
+    void mapToResponse_HandlesEmptyRolesAndContacts() {
+        employee.setRoles(null);
+        employee.setContactInfos(null);
+        when(employeeRepository.findByIdAndDeletedFalse(1L)).thenReturn(Optional.of(employee));
 
-        when(employeeRepository.save(any(Employee.class))).thenAnswer(i -> {
-            Employee e = i.getArgument(0);
-            e.setId(10L); // Simulate DB auto-gen ID
-            return e;
-        });
+        EmployeeResponseDTO result = employeeService.getEmployeeById(1L);
 
-        EmployeeResponseDTO result = employeeService.createEmployee(dto);
+        assertNull(result.getRoles());
+        assertNull(result.getContactInfos());
+    }
 
-        assertNotNull(result.getId());
-        assertEquals("Harvey Specter", result.getName());
-        verify(employeeRepository).save(any(Employee.class));
+    // --- EXCEPTION BRANCHES ---
+
+    @Test
+    void updateEmployee_NotFound_ThrowsException() {
+        when(employeeRepository.findByIdAndDeletedFalse(1L)).thenReturn(Optional.empty());
+        assertThrows(ResourceNotFoundException.class, () -> employeeService.updateEmployee(1L, requestDTO));
     }
 
     @Test
-    void deleteEmployee_PerformsSoftDelete() {
-        Employee emp = new Employee();
-        emp.setId(1L);
-        emp.setDeleted(false);
-        when(employeeRepository.findById(1L)).thenReturn(Optional.of(emp));
-
-        employeeService.deleteEmployee(1L);
-
-        ArgumentCaptor<Employee> captor = ArgumentCaptor.forClass(Employee.class);
-        verify(employeeRepository).save(captor.capture());
-        assertTrue(captor.getValue().isDeleted());
+    void getEmployeePerformance_NotFound_ThrowsException() {
+        when(employeeRepository.findById(1L)).thenReturn(Optional.empty());
+        assertThrows(ResourceNotFoundException.class, () -> employeeService.getEmployeePerformance(1L));
     }
 
     @Test
-    void getAllEmployees_ReturnsOnlyActiveMappedDTOs() {
-        Employee e1 = new Employee();
-        e1.setName(new FullName("Louis", "M", "Litt"));
-
-        when(employeeRepository.findByDeletedFalse()).thenReturn(Arrays.asList(e1));
-
+    void getAllEmployees_ReturnsList() {
+        when(employeeRepository.findByDeletedFalse()).thenReturn(List.of(employee));
         List<EmployeeResponseDTO> results = employeeService.getAllEmployees();
-
+        assertFalse(results.isEmpty());
         assertEquals(1, results.size());
-        assertEquals("Louis M Litt", results.get(0).getName());
-    }
-
-    @Test
-    void getEmployeeById_InvalidId_ThrowsException() {
-        when(employeeRepository.findById(99L)).thenReturn(Optional.empty());
-
-        assertThrows(ResourceNotFoundException.class, () -> employeeService.getEmployeeById(99L));
-    }
-
-    @Test
-    void getEmployeePerformance_ReturnsCorrectStats() {
-        Employee emp = new Employee();
-        emp.setName(new FullName("Mike", "", "Ross"));
-        when(employeeRepository.findById(1L)).thenReturn(Optional.of(emp));
-        when(ticketRepository.countByAssigneeAndStatus(1L, "FILED")).thenReturn(5L);
-        when(ticketRepository.countByAssigneeAndStatus(1L, "IN_PROGRESS")).thenReturn(2L);
-        when(ticketRepository.countByAssigneeAndStatus(1L, "CLOSED")).thenReturn(10L);
-
-        EmployeeStatsDTO stats = employeeService.getEmployeePerformance(1L);
-
-        assertEquals("Mike Ross", stats.getEmployeeName());
-        assertEquals(10, stats.getClosedCount());
     }
 }
